Add Kana_eat image link to index Add more content to Poha.html

--- a/recipes/poha.html
+++ b/recipes/poha.html
@@ -6,6 +6,38 @@
     </head>
     <body>
         <h1>Poha</h1>
-        <img src="../images/Poha_-_OZiva_1621607605027_1663146059640_1663146059640.webp" width ="1000">
+        <img src="../images/Poha_-_OZiva_1621607605027_1663146059640_1663146059640.webp" width ="800">
+        <h2>Description:</h2>
+        <h3>Poha is an easy, delicious and healthy breakfast recipe, popular in Maharashtra. Made with onions, potatoes and seasoning like chillies, crushed peanuts, lemon and curry leaves make up a tasty and easy one pot meal of Poha, especially when you don't feel like cooking. It is a very light and a refreshing breakfast dish.
+            
+            <p>The word "poha" refers to the flattened rice itself and as well the dish made with it.These flattened rice flakes are also known as parched rice of beaten rice. They are considered to be nutritious and wholesome as they are produced from minimally processed paddy.</p>
+        </h3>
+        <h2>Ingredients:</h2>
+        <UL>
+        <UL>
+            <li>1 Cup Poha/chivda (pressed rice)</li>
+            <li>1 tbsp Oil</li>
+            <li>1/8 tsp Asafoetida</li>
+            <li>1 tsp Mustard seeds</li>
+            <li>1/2 cup Onions, finely chopped</li>
+            <li>8-10 Curry leaves</li>
+            <li>2-3 Whole red chillies</li>
+            <li>1/2 cup Potatoes (diced small)</li>
+            <li>1/2 tsp Turmeric</li>
+            <li>2 tsp Salt</li>
+            <li>1 tsp Green chillies, finely chopped</li>
+            <li>1 tbsp Lemon juice</li>
+            <li>1 tbsp Coriander leaves, chopped</li>
+        </UL>
+        <h2>Steps:</h2>
+        <OL>
+            <li>Put poha in a colander and wash, not letting it soak too long in the water. Leave in the colander to drain out completely.</li>
+            <li>Heat the oil and add asafoetida, mustard seeds, curry leaves and onions along with whole red chillies.</li>
+            <li>When onions are light brown, add potatoes, and turn around till they look a bit glossy.</li>
+            <li>Add the turmeric and sauté over low heat till the potatoes are cooked through.</li>
+            <li>Increase the heat, add salt and poha and mix well. Saute till mixed and heated through.</li>
+            <li>Shut off the heat, and mix in the green chillies, lemon juice and half of the coriander.</li>
+            <li>Transfer on to a serving dish, garnish with the rest of the coriander and lemon wedges and serve.</li>
+        </OL>
     </body>
 </html>
