--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/poha.html">Poha</a>
+        <img src="images/Kana_eat.jpg">
+        <p>
+        <a href="recipes/poha.html">Poha</a></p>
     </body>
 </html>
